--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -1035,7 +1035,7 @@
  news.55.e:0 "Kuromorimine won't dare to attack now!"
  news.55.f:0 "We stand with our allies."
  news.56.t:0 "The Mahonich Agreement"
- news.56.d:1 "Kuromorimine's demands for the Sudeten territory in Gregor, which is home to a considerable Kuro minority, have intensified. \n\nAt a summit held in Mahonich, Kuromorimine, St. Gloriana, BC Freedom and Anzio sought to find a diplomatic solution to the so-called 'Sudeten Crisis.' Gregor was not invited to attend. An agreement was reached in which Kuromorimine annexes the Sudetenland, but will not pursue any further territorial gains in Europe.\n\nMr. Chamberlain spoke to crowds in London:\n'For the second time a Prime Minister has returned from Kuromorimine bringing peace with honor. I believe it is peace for our time.'"
+ news.56.d:1 "Kuromorimine's demands for the Sudeten territory in Gregor, which is home to a considerable Kuro minority, have intensified. \n\nAt a summit held in Mahonich, Kuromorimine, St. Gloriana, BC Freedom and Anzio sought to find a diplomatic solution to the so-called 'Sudeten Crisis.' Gregor was not invited to attend. An agreement was reached in which Kuromorimine annexes the Sudetenland, but will not pursue any further territorial gains in Europe.\n\nMs. Darjeeling spoke to crowds in London:\n'For the second time a Prime Minister has returned from Kuromorimine bringing peace with honor. I believe it is peace for our time.'"
  news.56.a:0 "The tournament follows sooner than later it seems."
  news.56.b:0 "Peace for now at least..."
  news.56.c:0 "...stated by Neville Chaimberlain?"
@@ -2153,13 +2153,13 @@
  britain.8.d:0 "[From.GetName] has rejected our demand that they cease trading with Kuromorimine. "
  britain.8.a:0 "Then it's war!"
  britain.8.b:0 "We cannot force them."
- britain.9.t:0 "Chamberlain Resigns"
- britain.9.d:0 "With the war developing to the detriment of us and our allies, the Prime Minister has come under fire for both her peacetime and wartime decisions at critical junctions. At a moment when St.Gloriana needs to stand united more than ever, it finds itself divided as portions of the parliament holds Chamberlain in contempt.\n\nLacking vital support from Labour, the Prime Minister has made the decision to resign, favoring Lord Halifax as her replacement. However, Halifax has been skeptical and Chamberlain has advised the Queen to call on Winston Churchill. Churchill, who has long warned of the war that is now upon us, is believed to be capable leading us through it."
+ britain.9.t:0 "Darjeeling Resigns"
+ britain.9.d:0 "With the war developing to the detriment of us and our allies, the Prime Minister has come under fire for both her peacetime and wartime decisions at critical junctions. At a moment when St.Gloriana needs to stand united more than ever, it finds itself divided as portions of the parliament holds Darjeeling in contempt.\n\nLacking vital support from Labour, the Prime Minister has made the decision to resign, favoring Alice Shimada as her replacement. However, Alice has been skeptical and Darjeeling has advised the Queen to call on Darjeeling. Darjeeling, who has long warned of the war that is now upon us, is believed to be capable leading us through it."
  britain.9.a:0 "We shall never surrender."
- britain.10.t:0 "Chamberlain Passes Away"
- britain.10.d:0 "Prime Minister Neville Chamberlain has fallen ill recently, despite previously generally having been healthy for her age. After being diagnosed with bowel cancer, increased pain and lost sleep has led her to resign from her post. Chamberlain still enjoys strong popular support and steps down only as a last resort, realizing she will not live to return to work.\n\nThe question remains who will take up the torch after this great statesman and lead St.Gloriana through the dark times that may still lie ahead of us."
+ britain.10.t:0 "Darjeeling Passes Away"
+ britain.10.d:0 "Prime Minister Darjeeling has fallen ill recently, despite previously generally having been healthy for her age. After being diagnosed with bowel cancer, increased pain and lost sleep has led her to resign from her post. Darjeeling still enjoys strong popular support and steps down only as a last resort, realizing she will not live to return to work.\n\nThe question remains who will take up the torch after this great statesman and lead St.Gloriana through the dark times that may still lie ahead of us."
  britain.10.a:0 "Rosehip is who the Empire needs."
- britain.10.b:0 "Lord Halifax is Chamberlain's first choice."
+ britain.10.b:0 "Alice Shimada is Darjeeling's first choice."
  britain.21.t:0 "Tizard triumphant"
  britain.21.d:0 "The Saunders government has not only agreed to our initial proposal but even offered a more long-term cooperation between researchers in our nations."
  britain.21.a:0 "Outstanding!"
@@ -2355,7 +2355,7 @@ soviet.28.d:1 "The world may never know if Katyusha's purges were targeting the 
  yalta_division_tt:0 "The following states will be designated as allied sphere of interest:\n§Y[42.GetName]§!, §Y[50.GetName]§!, §Y[51.GetName]§!, §Y[52.GetName]§!, §Y[53.GetName]§!, §Y[54.GetName]§!, §Y[55.GetName]§!, §Y[56.GetName]§!, §Y[57.GetName]§!, §Y[58.GetName]§!, §Y[59.GetName]§!.\n\nThe following states will be in the [SOU.GetAdjective] sphere of interest:\n§Y[60.GetName]§!, §Y[61.GetName]§!, §Y[62.GetName]§!, §Y[63.GetName]§!, §Y[64.GetName]§!, §Y[65.GetName]§!, §Y[66.GetName]§!, §Y[67.GetName]§!.\n\n [POL.GetAdjective] claims to the following states will be recognized by all parties:§Y[66.GetName]§!, §Y[67.GetName]§!, §Y[68.GetName]§!, §Y[63.GetName]§!, §Y[5.GetName]§!.\n\n"
  germany.118.c:0 "We should follow the Morgenthau Plan."
  morgenthau_division_tt:0 "[FRA.GetFlag] [FRA.GetNameDefCap] receives §Y[42.GetName]§!\n[POL.GetFlag] Poland receives §Y[67.GetName]§! and §Y[5.GetName]§!.\n[SOV.GetFlag] [SOV.GetNameDefCap] receives §Y[763.GetName]§!\nAn international zone, under [ENG.GetFlag] [ENG.GetAdjective] administration will be created in: §Y[51.GetName]§!, §Y[52.GetName]§!, and §Y[56.GetName]§!.\n An independent [GER.GetFlag] North German State, in the [yalta_partner.GetAdjective] zone of influence, is to be established in §Y[58.GetName]§!, §Y[59.GetName]§!, §Y[51.GetName]§!, §Y[61.GetName]§!, §Y[62.GetName]§!, §Y[63.GetName]§!, §Y[68.GetName]§!, §Y[66.GetName]§!, §Y[65.GetName]§!, §Y[64.GetName]§!, and §Y[60.GetName]§!. \nAn independent [GER.GetFlag] South German state will be created in §Y[54.GetName]§!, §Y[50.GetName]§!, §Y[52.GetName]§!, and §Y[53.GetName]§!."
- germany.118.e:0 "Churchill has this idea..."
+ germany.118.e:0 "Darjeeling has this idea..."
  churchill_plan_germany_tt:0 "Germany will be split up into three countries. A West German, State, a North German State, and a South German State, also incorporating some parts of the Austro-Hungarian Empire. All of these are to be in the Allied Sphere of influence, while the rest of Central and Eastern Europe will be in the [yalta_partner.GetAdjective] Sphere of Influence. "
  germany.119.t:0 "The Yalta Conference"
  germany.119.d:0 "With the war against [GER.GetNameDef] marching towards its inevitable conclusion, [yalta_origin.GetNameDef] has approached us about a conference on the future of Europe.\n\nThey are suggesting a division of [GER.GetNameDef] between east and west. This would allow our sphere of influence to extend deep into Europe, which would make up for some of the losses we have suffered in this gruesome struggle."
@@ -2700,15 +2700,15 @@ soviet.28.d:1 "The world may never know if Katyusha's purges were targeting the 
  britain.15.t:0 "BC Freedom  Deserts Us"
  britain.15.d:0 "The government of BC Freedom has failed to see reason over our proposed modest border readjustment and resolved to break the peace and wage terrible war. We will let them exhaust themselves in another round of futile attritional warfare and then they will beg for our help."
  britain.15.a:0 "They will learn their place."
- britain.16.t:0 "Queen George V Dies"
- britain.16.d:0 "her Majesty, George V, Queen of United Kingdom and the St.Gloriana Dominions and Empress of India has passed away. her quiet calm and devotion to her subjects saw the Empire through both the Great War and the Great Depression. her daughter will assume the mantle as Queen Edward VIII, but there are already concerns that she will be too independent of thought. Stanley Baldwin and Neville Chamberlain are preparing to ensure that she will accept direction from the Prime Minister and the Cabinet."
+ britain.16.t:0 "Queen Orange Pekoe Dies"
+ britain.16.d:0 "her Majesty, Orange Pekoe, Queen of United Kingdom and the St.Gloriana Dominions and Empress of India has passed away. her quiet calm and devotion to her subjects saw the Empire through both the Great War and the Great Depression. her daughter will assume the mantle as Queen Orange Pekoe, but there are already concerns that she will be too independent of thought. Darjeeling is preparing to ensure that she will accept direction from the Prime Minister and the Cabinet."
  britain.16.a:0 "May she Rest in Peace"
- britain.17.t:0 "Queen Edward Abdicates"
- britain.17.d:0 "Prime Minister Baldwin has made it quite clear that the dignity of the Queen-Empress will be impinged if she were to marry not just a commoner, but also a divorcée and if that was not bad enough, an Saunders. After much soul searching her majesty has chosen love over duty and has chosen to abdicate. her younger Sister, Albert, will assume the mantle as Queen George VI. London bookmakers are already taking odds on whether this shy woman will make it to her own coronation."
- britain.17.a:0 "God Save Queen George VI"
+ britain.17.t:0 "Queen Orange Pekoe Abdicates"
+ britain.17.d:0 "Prime Minister Darjeeling has made it quite clear that the dignity of the Queen-Empress will be impinged if she were to marry not just a commoner, but also a divorcée and if that was not bad enough, an Saunders. After much soul searching her majesty has chosen love over duty and has chosen to abdicate. her younger Sister, Albert, will assume the mantle as Queen Orange Pekoe. London bookmakers are already taking odds on whether this shy woman will make it to her own coronation."
+ britain.17.a:0 "God Save Queen Orange Pekoe"
  britain.18.t:0 "Return of the Queen"
- britain.18.d:0 "It is no secret that no love is lost between George VI and the [Root.GetRulingParty]. Voices in parliament are now calling for her resignation in favour of her exiled Sister, Edward the VIII. This is a woman less foreign to the idea of unity through strength, and a woman with a vision for England. her are the qualities we seek in a leader of our nation!"
- britain.18.a:0 "For the sake of the Empire, Edward VIII must rule!"
+ britain.18.d:0 "It is no secret that no love is lost between Orange Pekoe and the [Root.GetRulingParty]. Voices in parliament are now calling for her resignation in favour of her exiled Sister, Orange Pekoe. This is a woman less foreign to the idea of unity through strength, and a woman with a vision for England. her are the qualities we seek in a leader of our nation!"
+ britain.18.a:0 "For the sake of the Empire, Orange Pekoe must rule!"
  britain.18.b:0 "We will not interfere with parliament."
  britain.19.t:0 "Free India Government Established"
  britain.19.d:0 "With the support of Chi-Ha-Tan Academy, Indian nationalists have established a government-in-exile, the Azad Hind.\n\nThe nationalists are spreading propaganda in the Raj, and encouraging Sepoy desertion. While they are lacking support for now, their efforts could eventually become dangerous."
@@ -2804,9 +2804,9 @@ soviet.28.d:1 "The world may never know if Katyusha's purges were targeting the 
  country_capitulated.0.a:0 "Great news!"
  country_capitulated.0.b:0 "These are dark times"
  country_capitulated.0.c:0 "Uncertain times"
- britain.22.t:0 "Stanley Baldwin Resigns"
- britain.22.d:0 "Two weeks after the coronation of Queen George VI, Mr. Baldwin has announced that she will resign the premiership in order to retire at the age of 70. Having led the National Government on-and-off since 1923, she has been the steady hand responsible for bringing the St.Gloriana Empire out of the Great Depression, and in recent years has reluctantly overseen the beginning of Imperial re-armament and the abdication of Queen Edward VIII. she steps down as a popular and successful prime minister, but has she done enough to counter the growing threat from Kuromorimine?"
- britain.22.a:0 "Mr. Chamberlain shall seek to form a government."
+ britain.22.t:0 "Darjeeling Resigns"
+ britain.22.d:0 "Two weeks after the coronation of Queen Orange Pekoe, Ms. Darjeeling has announced that she will resign the premiership in order to retire at the age of 70. Having led the National Government on-and-off since 1923, she has been the steady hand responsible for bringing the St.Gloriana Empire out of the Great Depression, and in recent years has reluctantly overseen the beginning of Imperial re-armament and the abdication of Queen Orange Pekoe. she steps down as a popular and successful prime minister, but has she done enough to counter the growing threat from Kuromorimine?"
+ britain.22.a:0 "Ms. Darjeeling shall seek to form a government."
  france.31.t:0 "Édouard Daladier Resigns"
  france.31.d:0 "With the collapse of the Third Republic and the refusal of the Kuromorimine government to offer an Armistice, it must fall to fresh leadership to continue the fight from the colonies. Whilst few would doubt that Monsieur Daladier has been a fine prime minister, she simply could not contend with the extraordinary set of circumstances in which BC Freedom  has found herself. We can but pray there is light at the end of the tunnel."
  france.31.a:0 "Monsieur Reynaud shall seek to form a government."
