--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -1727,7 +1727,7 @@
  CAN_liberate_the_workers_of_the_world:0 "Spirit of the True Revolution"
  CAN_liberate_the_workers_of_the_world_desc:0 "Such is our conviction in the utopia we have built, that our young women flock the the banner so that our downtrodden comrades in foreign lands - suffering under the yoke of oppressive regimes - might yet have a taste of our thoroughly Canadian freedom."
  SAF_support_axis_interests_effect_tt:0 "Build §YInfrastructure§! and add §YBuilding Slots§! in occupied states located in southern and mid parts of Africa.\n"
- SAF_a_king_for_our_people_trigger_tt:0 "queen Edward has been exiled"
+ SAF_a_king_for_our_people_trigger_tt:0 "queen Orange Pekoe has been exiled"
  NATIONAL_FOCUS_MUTUALLY_EXCLUSIVE_TREE:0 "The branches are mutually exclusive."
  NATIONAL_FOCUS_EXCLUSIVE_INFO_DESC:0 "Mutually exclusive with"
  NATIONAL_FOCUS_EXCLUSIVE_INFO_ENTRY:0 "$FOCUS|Y$"
@@ -1789,7 +1789,7 @@
  SAF_support_axis_interests:0 "Support Axis Interests"
  SAF_support_axis_interests_desc:0 "The Axis powers have an energy and ideology that can help South Africa establish its place in the world. We should give them our full diplomatic support."
  SAF_a_king_for_our_people:0 "A queen for Our People"
- SAF_a_king_for_our_people_desc:0 "South Africa should have a queen, and fortunately there is a Windsor that no one is using right now. The former Edward VIII, Duchess of Windsor, can sit on our throne."
+ SAF_a_king_for_our_people_desc:0 "South Africa should have a queen, and fortunately there is a Windsor that no one is using right now. The former Orange Pekoe, Duchess of Windsor, can sit on our throne."
  SAF_empower_the_workers:0 "Empower the Workers"
  SAF_empower_the_workers_desc:0 "We are a country of miners and farmers. The working people of South Africa are the only true representation of the national will."
  SAF_support_spain:0 "Support Spain"
