--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -199,9 +199,9 @@
  nikita_khrushchev:0 "Nikita Khrushchev"
  alexander_kerensky:0 "Alexander Kerensky"
  konstantin_rodzaevsky:0 "Konstantin Rodzaevsky"
- george_v:0 "Earl Grey"
+ george_v:0 "Orange Pekoe"
  george_v_desc:0 "Rallying around the Queen of the United Kingdom and the British Dominions, as well as Empress of India, the British people stand united and proud of their imperial legacy."
- harry_pollitt:0 "Harry Pollitt"
+ harry_pollitt:0 "Assam"
  clement_attlee:0 "Clement Attlee"
  clement_attlee_desc:0 "A modest man with much to be modest about."
  john_beckett:0 "John Beckett"
@@ -1511,7 +1511,7 @@
  SAF_cheap_labor_1:0 "Cheap Labor"
  SAF_cheap_labor_2:0 "Cheap Labor"
  SAF_cheap_labor_3:0 "Cheap Labor"
- SAF_king_edward:0 "Edward VIII"
+ SAF_king_edward:0 "Orange Pekoe"
  SAF_abandon_westminster_fascism:0 "Abandon Westminster"
  SAF_abandon_westminster_communism:0 "Abandon Westminster"
  SAF_history_of_segregation:0 "History of Segregation"
@@ -2376,13 +2376,13 @@
  FRA_matignon_agreements:0 "Matignon Agreements"
  FRA_communism_banned:0 "Communism Banned"
  ENG_colonial_elite:0 "Colonial Elite"
- ENG_king_edward:0 "Edward VIII"
- ENG_king_edward_fascism:0 "Edward VIII"
- ENG_george_vi:0 "George VI"
+ ENG_king_edward:0 "Orange Pekoe"
+ ENG_king_edward_fascism:0 "Orange Pekoe"
+ ENG_george_vi:0 "Orange Pekoe"
  ENG_george_vi_desc:0 "The first Head of the Commonwealth and last Empress of India is still considered the inheritor of a great legacy. Like her mother before her she is a popular figurehead and unifier for the British people."
  ENG_continuation_of_politics:1 "Continuation of Politics"
  ENG_guided_by_britain:0 "Guided by Britain"
- ENG_the_mosley_memorandum_idea:0 "The Mosley Memorandum"
+ ENG_the_mosley_memorandum_idea:0 "The Rosehip Memorandum"
  ENG_david_stirling:0 "David Stirling"
  ENG_continuation_of_politics_desc:0 "It has proven easy to gain the people's support for intervention in key countries where the political leanings differ from our own. We can use this to our advantage."
  SELECT_DESIGN_COMPANY_DESC:0 "By selecting this §YDesign Company§! they will permanently affect capabilities on all equipment researched while they are hired.\n"
@@ -2592,8 +2592,8 @@
  ENG_mary_sophia_allen:0 "Mary Sophia Allen"
  ENG_george_orwell:0 "George Orwell"
  ENG_sylvia_pankhurst:0 "Sylvia Pankhurst"
- ENG_winston_churchill:0 "Winston Churchill"
- ENG_oswald_mosley:0 "Oswald Mosley"
+ ENG_winston_churchill:0 "Darjeeling"
+ ENG_oswald_mosley:0 "Rosehip"
  ENG_david_lloyd_george:0 "David Lloyd George"
  ENG_corgis_2:0 "Dookie"
  ENG_corgis_3:0 "Jane"
