--- a/localisation/english/nsb_characters_l_english.yml
+++ b/localisation/english/nsb_characters_l_english.yml
@@ -343,7 +343,7 @@
  USA_edward_brooks:0 "Edward Brooks"
  USA_clarence_huebner:0 "Clarence Huebner"
  USA_alexander_patch:0 "Alexander Patch"
- USA_william_simpson:0 "William Simpson"
+ USA_william_simpson:0 "Rukuriri"
  USA_j_lawton_collins:0 "J. Lawton Collins"
  USA_courtney_hodges:0 "$courtney_hodges$"
  USA_joseph_stilwell:0 "$joseph_stilwell$"
@@ -467,10 +467,10 @@
  FRA_charles_maurras:0 "$charles_maurras$"
 
  #UNITED KINGDOM
- ENG_stanley_baldwin:0 "Stanley Baldwin"
+ ENG_stanley_baldwin:0 "Darjeeling"
  ENG_harry_pollitt:0 "$harry_pollitt$"
- ENG_neville_chamberlain:0 "Neville Chamberlain"
- ENG_horatio_dundas:0 "Horatio Dundas"
+ ENG_neville_chamberlain:0 "Darjeeling"
+ ENG_horatio_dundas:0 "Orange Pekoe"
  ENG_alan_brooke:0 "$alan_brooke$"
  ENG_bernard_montgomery:0 "$bernard_montgomery$"
  ENG_claude_auchinleck:0 "$claude_auchinleck$"
