--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -28,9 +28,9 @@
  french_idealism3_desc:0 "Originally 2 separate schools, BC Freedom is a product of a flimsy reunion between them. Despite clashes between 2 classes of students, BC Freedom still maintain an efficent Sensha-Do Team. A cunning opposition can, perhaps, use this inner conflict to their advantage when fighting BC Freedom Academy.."
  french_idealism4:0 "Freedom Idealism"
  french_idealism4_desc:0 "Originally 2 separate schools, BC Freedom is a product of a flimsy reunion between them. Despite clashes between 2 classes of students, BC Freedom still maintain an efficent Sensha-Do Team. A cunning opposition can, perhaps, use this inner conflict to their advantage when fighting BC Freedom Academy.."
- ENG_communism_party:0 "Rosehip's Socialist Front"
+ ENG_communism_party:0 "Assam's Socialist Front"
  ENG_democratic_party:0 "Darjeeling's Popular Front"
- ENG_fascism_party:0 "Assam's Nationalist Front"
+ ENG_fascism_party:0 "Rosehip's Nationalist Front"
  british_idealism:0 "Gloriana Idealism"
  british_idealism_desc:0 "St.Gloriana is well-known for its unique Sensha-Do style of elegance and order. Darjeeling, its commander, prides herself on alledgedly never spilling her tea, regardless of circumstances. Considered to be amongst the Sensha-Do powerhouses, any school fighting against St.Gloriana should proceed with caution."
  british_idealism2:0 "Gloriana Idealism"
