--- a/localisation/english/mtg_decisions_l_english.yml
+++ b/localisation/english/mtg_decisions_l_english.yml
@@ -400,11 +400,11 @@
  ENG_march_on_downing_street:1 "March on Downing Street"
  ENG_march_on_downing_street_desc:0 "A final great march on No. 10 Downing Street will surely push the government to call for a referendum on the future of the nation. They cannot stand against the will of the people."
  ENG_speech_against_germany:1 "Hold Anti-Kuro Speech"
- ENG_speech_against_germany_desc:0 "As Mosley's popularity soars, so does the outlandish criticism she is bombarded with. To assuage fears that she merely wishes to force Hitlerism upon the British people, perhaps a grand and powerfully-formulated speech is required, in which Mosley distances herself in unmistaken terms from the Maho's variety of fascism."
+ ENG_speech_against_germany_desc:0 "As Rosehip's popularity soars, so does the outlandish criticism she is bombarded with. To assuage fears that she merely wishes to force Hitlerism upon the British people, perhaps a grand and powerfully-formulated speech is required, in which Rosehip distances herself in unmistaken terms from the Maho's variety of fascism."
  ENG_speech_against_germany_tt:0 "§RShould stability drop below 50% during the Blackshirt Marches, a civil war will start!§!\n"
  ENG_reconciliatory_speech:0 "Reconciliatory Speech"
  ENG_reconciliatory_speech_desc:0 "In order to reduce increasing domestic political tensions, a speech with reconciliatory language may well be just what is required."
- ENG_the_mosley_plan:2 "Enact The Mosley Plan"
+ ENG_the_mosley_plan:2 "Enact The Rosehip Plan"
  ENG_the_mosley_plan_desc:0 "A bold restructuring of the economy, combined with ample propaganda and public investments, should galvanize the people in one great effort to repair the nation and kick-start our rearmament."
  ENG_imperial_conference_decision:0 "Imperial Conference"
  ENG_imperial_conference_decision_desc:0 "The Imperial Conference has started, and we may push our agenda for the next two months, before Dominion representatives return home again. Improving diplomatic relations with our Dominions will likely increase the chances of those Dominions agreeing with our proposals."
@@ -421,9 +421,9 @@
  ENG_discuss_imperial_federation:0 "Discuss Imperial Federation"
  ENG_discuss_imperial_federation_desc:0 "Ever since the previous century, voices have spoken up in favor of joining all parts of the Empire together in one Imperial Federation, rather than progress further to the alternative of 'home rule', involving independence for all Dominions. We will now put forward a motion to discuss it for the last time."
  won_british_civil_war:1 "Won a civil war less than one year ago.\n"
- ENG_abdication_crisis:1 "Edward VIII Abdication Crisis"
- ENG_abdication_crisis_changed_mind:1 "Edward VIII did not marry Wallis Simpson"
- ENG_edward_viii_abdicated:0 "Edward VIII abdicated"
+ ENG_abdication_crisis:1 "Orange Pekoe Abdication Crisis"
+ ENG_abdication_crisis_changed_mind:1 "Orange Pekoe did not marry Rukuriri"
+ ENG_edward_viii_abdicated:0 "Orange Pekoe abdicated"
  LIT_move_capital_to_vilnius:0 "Move Capital to Vilnius"
  governments_in_exile:0 "Governments In Exile"
  governments_in_exile_desc:1 "[GetGovernmentInExileCategoryDesc]"
