--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2916,6 +2916,23 @@
  POLITICS_SAORI_DESC:0 "Born June 22nd 1914 in rural Ooarai, the first Great War was raging across Europe. Coming from a poorer family her mother was conscripted into the Ooarai-Turul Empire's infantry corps and sent off to the eastern front to fight the Pravda threat. she was killed on the Eastern Front in 1917. \n \n With the hatered of Pravda and Nationalistic rhetoric sweeping post war Kuromorimine and Ooarai, Saori was swept up in the far right movements. In 1923 a political party known as the Sozialistische Demokratische Ooarai Vorderseite was formed by post war veterans. Their ideals were mild compared to the Nishizumi doctrine that was sweeping across Kuromorimine. Joining in 1931 in the military wing of the party, Saori quicky rose the ranks thanks to her radio communication and sub par commanding skills. \n \n In 1934 there was a power grab as the head of the party was killed in a firefight between the leftist Pravda front in Vienna. Through her charisma and charm Saori rose to the top of the party, controlling the military and the party itself. With the Kuromorimine civil war raging it is her time to act."
  head_of_military_complex:0 "Head of the SDK(M)"   
  ##IDEAS##
+ sdf_stormtroopers:0 "Stormtroopers"
+ sdf_merge_units:0 "Merged Units"
+ sdf_dedicated_armour:0 "Dedicated Armour"
+ sdf_casemates:0 "Casemates"
+ sdf_streamline_trucks:0 "Streamlined Trucks"
+ sdf_tank_mechanics:0 "Tank Mechanics"
+ sdf_mechanized_factory:0 "Mechanized Factory"
+ sdf_arato:0 "Arado Jets"
+ sdf_officer_training:0 "Officers Training"
+ sdf_tank_factory:0 "Tank Factory"
+ sdf_aircraft_industry:0 "Aircraft Industry"
+ sdf_radios_everyone:0 "Radios for Everyone"
+ sdf_tankette:0 "Tankettes"
+ sdf_bayonet_strength:0 "Bayonet Strength"
+ sdf_50cm_cannon:0 "50cm Cannon"
+ sdf_chemical_warfare:0 "Chemical Warfare"
+ SDF_volksturm:0 "Volkssturm"
  sdf_army_w_state:0 "Army With a State"
  sdf_army_w_state_desc:0 "Like the Kuromormine of old, we are a people that are centred around one goal Total Victory, all shall fight for it no matter the cost"
  sdf_revolutionary_fevor:0 "Revolutionary Fervor"
