--- a/localisation/english/lar_focus_l_english.yml
+++ b/localisation/english/lar_focus_l_english.yml
@@ -886,7 +886,7 @@
  FRA_je_suis_la_deluge_desc:0 "The French revolution was the flood that swept away the old and weak regimes that had controlled Europe for so long. Now, a new flood is here."
  FRA_coordinate_rearmament_tt:0 "Reduces the cost of production licenses for members of our faction."
  invite_to_faction_tt:0 "Is invited into our faction."
- VIC_emergency_powers_to_petain:0 "Emergency Powers To Andou"
+ VIC_emergency_powers_to_petain:0 "Emergency Powers To Oshida"
  VIC_emergency_powers_to_petain_desc:0 "With the battle for BC lost, it is clear that radical measures must be taken to secure the state. The president-commandant can not be restricted in doing what is necessary."
  VIC_the_national_revolution:0 "The National Revolution"
  VIC_the_national_revolution_desc:1 "Our defeat was without a doubt caused by a fundamental flaw in our nation. It will take a long time to remedy this flaw, but perhaps the shock of our defeat will allow us to return stronger."
