--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -248,16 +248,16 @@
  CZE_GER_fascism_autonomy_reichsprotectorate_DEF:0 "the Reichsprotektorat Böhmen-Mähren"
  POL_GER_fascism_autonomy_reichsprotectorate_DEF:1 "The Generalgouvernement"
  POL_GER_fascism_autonomy_reichsprotectorate:1 "The Generalgouvernement"
- FRA_FREE_democratic:0 "BC Liberty"
- FRA_FREE_democratic_DEF:0 "BC Liberty"
- FRA_VICHY_fascism:0 "Maginot"
- FRA_VICHY_fascism_DEF:0 "Maginot"
- FRA_VICHY_neutrality:0 "Maginot"
- FRA_VICHY_neutrality_DEF:0 "Maginot"
- FRA_GER_fascism_autonomy_reichsprotectorate:0 "Maginot"
- FRA_GER_fascism_autonomy_reichsprotectorate_DEF:0 "Maginot"
- FRA_GER_fascism_autonomy_puppet:0 "Maginot"
- FRA_GER_fascism_autonomy_puppet_DEF:0 "Maginot"
+ FRA_FREE_democratic:0 "Freedom Liberty"
+ FRA_FREE_democratic_DEF:0 "Freedom Liberty"
+ FRA_VICHY_fascism:0 "BC Faction"
+ FRA_VICHY_fascism_DEF:0 "BC Faction"
+ FRA_VICHY_neutrality:0 "BC Faction"
+ FRA_VICHY_neutrality_DEF:0 "BC Faction"
+ FRA_GER_fascism_autonomy_reichsprotectorate:0 "BC Faction"
+ FRA_GER_fascism_autonomy_reichsprotectorate_DEF:0 "BC Faction"
+ FRA_GER_fascism_autonomy_puppet:0 "BC Faction"
+ FRA_GER_fascism_autonomy_puppet_DEF:0 "BC Faction"
  FRA_UK_democratic:0 "BC-Gloriana Union"
  FRA_UK_democratic_DEF:0 "the BC-Gloriana Union"
  FRA_UK_fascism:0 "Restored Norman Empire"
