just a little bit of tips

--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -80,3 +80,6 @@
  LOADING_TIP_78:0 "Beyond the steel shells and roaring engines, the heart of tankery beats with the pulse of unity. Together, we're not just a team; we're family.\n- Miho Nishizumi"
  LOADING_TIP_79:0 "In the crucible of battle, the bonds we forge become the unbreakable chains that link us together, propelling us toward the horizon of victory.\n- Miho Nishizumi"
  LOADING_TIP_80:0 "In the heat of battle, it's not just about winning or losing. It's about leading with your heart, embracing the unexpected, and forging bonds that withstand the toughest challenges. \n- Miho Nishizumi"
+ LOADING_TIP_81:0 "Why should i have to bow to anyone? \n- Marie"
+ LOADING_TIP_82:0 "Chihatan is full of charging idiots, so we should find a place advantageous to us and ambush them \n- Literal koala"
+ 
