--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -712,7 +712,7 @@
  MNT_communism_party:0 "Communist Party of Montenegro" #or KPCG
  MNT_neutrality_party:0 "Federalist Party" # Montenegrin ultra nationalists, start democtratic right wing but went full fascist collaboration in 41'
  UKR_fascism_party:0 "BUN"
- UKR_democratic_party:0 Borscht National Democratic Alliance" # or UNDO
+ UKR_democratic_party:0 "Borscht National Democratic Alliance" # or UNDO
  UKR_communism_party:0 "Communist Party of Borscht"
  UKR_neutrality_party:0 "Borscht Progress Party"
  GEO_fascism_party:0 "Tbilisi Council"
